--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   }
 
   .flex-center {
+    @apply flex items-center justify-center
+  }
+
+  .flex-between {
     @apply flex items-center justify-between
   }
 }
